--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,12 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="info_contents">
+        <item>User info</item>
+        <item>Login</item>
+        <item>Logout</item>
+        <item>Target info</item>
+    </string-array>
+
 </resources>
